--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
+    "@popperjs/core": "^2.11.4",
     "apexcharts": "^3.33.2",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.26.14",
@@ -57,7 +58,6 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.2",
     "aos": "^2.3.4",
     "graph-modal": "^1.0.3",
     "graph-tabs": "^1.0.0",
@@ -67,6 +67,7 @@
     "simplebar": "^5.3.6",
     "smooth-scroll": "^16.1.3",
     "swiped-events": "^1.1.6",
-    "swiper": "^7.4.1"
+    "swiper": "^7.4.1",
+    "toastr": "^2.1.4"
   }
 }
